syntax = "proto3";

package order;

option go_package = "e-commerce-microservice/proto-shared/gen/pb";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  }

  rpc GetOrder(GetOrderRequest) returns (OrderResponse) {
    option (google.api.http) = {
      get: "/v1/orders/{id}"
    };
  }

  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {
    option (google.api.http) = {
      get: "/v1/orders"
    };
  }

  rpc UpdateOrder(UpdateOrderRequest) returns (OrderResponse) {
    option (google.api.http) = {
      put: "/v1/orders/{id}"
      body: "*"
    };
  }

  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {
    option (google.api.http) = {
      delete: "/v1/orders/{id}"
    };
  }
}

// ============================
// Message Definitions
// ============================

message Order {
  string id = 1;
  string username = 2;
  string car_id = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message OrderResponse {
  Order order = 1;
}

message CreateOrderRequest {
  string username = 1;
  string car_id = 2;
}

message UpdateOrderRequest {
  string id = 1;
  string status = 2;
}

message GetOrderRequest {
  string id = 1;
}

message DeleteOrderRequest {
  string id = 1;
}

message DeleteOrderResponse {
  string message = 1;
}

message ListOrdersRequest {
  string username = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
}
